[tool.poetry]
name = "bddc"
version = "0.2.0"
description = "the interactive BDD calculator"
authors = ["Adam Smith <adam@adamsmith.as>"]
readme = "README.md"
homepage = "https://github.com/rndmcnlly/bddc"
repository = "https://github.com/rndmcnlly/bddc"
keywords = ["bdd"]

[tool.poetry.dependencies]
python = "3.10.*"
omega = "0.3"
Nuitka = "2.0"
setuptools = "^69.0"
cython = "^3.0"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
